--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -29,7 +29,7 @@
         <div class="header-controls">
             <ul>
                 <li><a href="../paginas/home.html"><ion-icon title="Voltar à página Home" name="home-outline" id="home-p"></ion-icon></a></li>
-                <li><a href="add-produto.html" class="nav-link" title="Adicionar Produto"><i class="fas fa-plus-circle"></i></a></li>
+                <li><a href="add-produto.html" class="nav-link" title="Adicionar Produto"><ion-icon name="add-circle-outline"></ion-icon></a></li>
             </ul>
 
             <div class="carrinho-icone" title="Carrinho de Compras">
