ajustes de notificação

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Login</title>
 </head>
 <body>
+    <div id="feedback"></div>
     <main>
         <section id="login">
             <div id="imagem"></div>
@@ -34,6 +35,7 @@
             </div>
         </section>
     </main>
+    <script type="module" src="./assets/js/modules/feedback.js"></script>
     <script src="./assets/js/auth.js" defer></script>
 </body>
 </html>
