--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div id="feedback"></div>
   <header>
     <h1>Perfil</h1>
     <h2 id="saudacao"></h2>
@@ -29,7 +30,7 @@
         <label for="ifem">Feminino</label>
       </p>
       <p><label for="idat">Data de Nascimento</label> <input type="date" name="dat" id="idat" /></p>
-      <p><label for="itel">Telefone</label> <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\\(\\d{2}\\)\\d{4,5}-\\d{4}$" placeholder="(XX)XXXXX-XXXX" /></p>
+      <p><label for="itel">Telefone</label> <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\)\s?\d{4,5}-\d{4}$" placeholder="(XX)XXXXX-XXXX" /></p>
       <p><label for="iemail">Email</label> <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com" /></p>
       <p><label for="isenha">Senha</label> <input type="password" name="senha" id="isenha" required minlength="6" /></p>
       <p><label for="insenha">Nova Senha (opcional)</label> <input type="password" name="nsenha" id="insenha" placeholder="Nova senha" /></p>
@@ -51,7 +52,7 @@
   <script type="module" src="../assets/js/perfil.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+  <script type="module" src="../assets/js/modules/feedback.js"></script>
   <script>
   const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
 
