--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -128,8 +128,8 @@ label {
 }
 
 #enviar {
-  background-color: var(--verde-claro);
-  color: var(--cinza-pedra);
+  background-color: var(--verde-folha);
+  color: var(--branco-neve);
   border-radius: 10px;
   padding: 10px;
   border: none;
@@ -139,7 +139,7 @@ label {
 }
 
 #enviar:hover {
-  background-color: var(--verde-folha);
+  background-color: var(--marrom-terra);
   color: var(--branco-neve);
 }
 
@@ -159,7 +159,6 @@ label {
   background-color: #5a422c;
 }
 
-
 @media (min-width: 600px) {
   .content {
     max-width: 600px;
@@ -167,11 +166,61 @@ label {
   }
 }
 
+/* Feedback - Mantendo sua paleta de cores */
+.feedback {
+  position: fixed;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(100%);
+  color: var(--branco-neve);
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  z-index: 1000;
+  font-weight: 500;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.feedback.show {
+  transform: translateX(-50%) translateY(0);
+  opacity: 1;
+}
+
+/* Tipos de feedback usando SUA paleta */
+.feedback.sucesso {
+  background: var(--verde-folha);
+  border-left: 5px solid var(--verde-claro);
+}
+
+.feedback.erro {
+  background: #8B2E2E; /* Vermelho terroso - harmonizado com seu marrom-terra */
+  border-left: 5px solid #C44D4D;
+}
+
+.feedback.aviso {
+  background: var(--marrom-terra);
+  border-left: 5px solid var(--bege-areia);
+  color: var(--branco-neve);
+}
+
+/* Animação de shake para erros - mais suave */
+@keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  20%, 60% { transform: translateX(-5px); }
+  40%, 80% { transform: translateX(5px); }
+}
+
+.error-border {
+  border: 2px solid #8B2E2E !important;
+  animation: shake 0.5s ease-in-out;
+}
+
     </style>
 </head>
 
 <body>
-
+    <div id="feedback" class="feedback" aria-live="polite"></div>
     <header>
         <h1>Cadastro</h1>
         <img src="../assets/img/logo.png" alt="Logo EcoMarket">
@@ -216,10 +265,10 @@ label {
             <input id="limpar" type="reset" value="Limpar">
         </p>
     </form>
-    
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <script type="module" src="../assets/js/modules/feedback.js"></script>
     <script src="../assets/js/auth.js"></script>
 </body>
 
