--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -2,274 +2,286 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <title>EcoMarket - Conta</title>
-    <style>
-        @charset "UTF-8";
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <title>EcoMarket - Conta</title>
+  <style>
+    @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-:root {
-  --verde-folha: #3A6351;
-  --verde-claro: #A8C686;
-  --marrom-terra: #7B5E42;
-  --bege-areia: #F2E8CF;
-  --branco-neve: #FFFFFF;
-  --cinza-pedra: #4F4F4F;
-}
+    :root {
+      --verde-folha: #3A6351;
+      --verde-claro: #A8C686;
+      --marrom-terra: #7B5E42;
+      --bege-areia: #F2E8CF;
+      --branco-neve: #FFFFFF;
+      --cinza-pedra: #4F4F4F;
+    }
 
-body {
-    font-family: 'Poppins', sans-serif;
+    body {
+      font-family: 'Poppins', sans-serif;
 
-  margin: 0;
-  background: var(--bege-areia);
-  color: var(--cinza-pedra);
-}
+      margin: 0;
+      background: var(--bege-areia);
+      color: var(--cinza-pedra);
+    }
 
-header {
-  background: linear-gradient(to right, var(--verde-folha), var(--verde-claro));
-  color: var(--branco-neve);
-  padding: 20px;
-  text-align: center;
-  position: relative;
-  height: 160px;
-}
+    header {
+      background: linear-gradient(to right, var(--verde-folha), var(--verde-claro));
+      color: var(--branco-neve);
+      padding: 20px;
+      text-align: center;
+      position: relative;
+      height: 160px;
+    }
 
-header img {
-  max-width: 10%;
-  height: auto;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
+    header img {
+      max-width: 10%;
+      height: auto;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+    }
 
-header ul {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  list-style-type: none;
-  font-weight: bolder;
-}
+    header ul {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      list-style-type: none;
+      font-weight: bolder;
+    }
 
-header ul li {
-  color: var(--branco-neve);
-}
+    header ul li {
+      color: var(--branco-neve);
+    }
 
-header a {
-  color: var(--branco-neve);
-  font-size: 30px;
-  padding: 5px;
-}
+    header a {
+      color: var(--branco-neve);
+      font-size: 30px;
+      padding: 5px;
+    }
 
-header a:hover {
-  background-color: var(--marrom-terra);
-  transition: 0.5s;
-  padding: 8px;
-  border-radius: 20px;
-}
+    header a:hover {
+      background-color: var(--marrom-terra);
+      transition: 0.5s;
+      padding: 8px;
+      border-radius: 20px;
+    }
 
-.profile-pic {
-  color: var(--branco-neve);
-  width: 150px;
-  height: 150px;
-  background: #ddd;
-  border-radius: 50%;
-  margin: 10px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 75px;
-  border: 3px solid var(--branco-neve);
-}
+    .profile-pic {
+      color: var(--branco-neve);
+      width: 150px;
+      height: 150px;
+      background: #ddd;
+      border-radius: 50%;
+      margin: 10px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 75px;
+      border: 3px solid var(--branco-neve);
+    }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  background: var(--branco-neve);
-  padding: 20px;
-  margin: 10px;
-  border: 2px solid var(--verde-folha);
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  text-align: left;
-}
+    .content {
+      display: flex;
+      flex-direction: column;
+      background: var(--branco-neve);
+      padding: 20px;
+      margin: 10px;
+      border: 2px solid var(--verde-folha);
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      text-align: left;
+    }
 
-input {
-  border-radius: 5px;
-  padding: 4px;
-  border: 1px solid var(--verde-claro);
-}
+    input {
+      border-radius: 5px;
+      padding: 4px;
+      border: 1px solid var(--verde-claro);
+    }
 
-input[type="text"],
-input[type="tel"],
-input[type="email"],
-input[type="password"],
-input[type="date"] {
-  padding: 8px;
-  font-size: 15px;
-  width: 50%;
-}
+    input[type="text"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="password"],
+    input[type="date"] {
+      padding: 8px;
+      font-size: 15px;
+      width: 50%;
+    }
 
-input[type="tel"] {
-  font-family: monospace;
-}
+    input[type="tel"] {
+      font-family: monospace;
+    }
 
-label {
-  font-size: 1.1em;
-  font-weight: bold;
-}
+    label {
+      font-size: 1.1em;
+      font-weight: bold;
+    }
 
-#botoes-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
+    #botoes-container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
-#enviar {
-  background-color: var(--verde-folha);
-  color: var(--branco-neve);
-  border-radius: 10px;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  font-weight: bold;
-  transition: background-color 0.3s;
-}
+    #enviar {
+      background-color: var(--verde-folha);
+      color: var(--branco-neve);
+      border-radius: 10px;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
 
-#enviar:hover {
-  background-color: var(--marrom-terra);
-  color: var(--branco-neve);
-}
+    #enviar:hover {
+      background-color: var(--marrom-terra);
+      color: var(--branco-neve);
+    }
 
-#limpar {
-  background-color: var(--marrom-terra);
-  color: var(--branco-neve);
-  border-radius: 10px;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  font-weight: bold;
-  margin-left: 4px;
-  transition: background-color 0.3s;
-}
+    #limpar {
+      background-color: var(--marrom-terra);
+      color: var(--branco-neve);
+      border-radius: 10px;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      margin-left: 4px;
+      transition: background-color 0.3s;
+    }
 
-#limpar:hover {
-  background-color: #5a422c;
-}
+    #limpar:hover {
+      background-color: #5a422c;
+    }
 
-@media (min-width: 600px) {
-  .content {
-    max-width: 600px;
-    margin: 10px auto;
-  }
-}
+    @media (min-width: 600px) {
+      .content {
+        max-width: 600px;
+        margin: 10px auto;
+      }
+    }
 
-/* Feedback - Mantendo sua paleta de cores */
-.feedback {
-  position: fixed;
-  bottom: 1rem;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  color: var(--branco-neve);
-  padding: 1rem 2rem;
-  border-radius: 8px;
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-  z-index: 1000;
-  font-weight: 500;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
+    /* Feedback - Mantendo sua paleta de cores */
+    .feedback {
+      position: fixed;
+      bottom: 1rem;
+      left: 50%;
+      transform: translateX(-50%) translateY(100%);
+      color: var(--branco-neve);
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      opacity: 0;
+      transition: all 0.3s ease-in-out;
+      z-index: 1000;
+      font-weight: 500;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-.feedback.show {
-  transform: translateX(-50%) translateY(0);
-  opacity: 1;
-}
+    .feedback.show {
+      transform: translateX(-50%) translateY(0);
+      opacity: 1;
+    }
 
-/* Tipos de feedback usando SUA paleta */
-.feedback.sucesso {
-  background: var(--verde-folha);
-  border-left: 5px solid var(--verde-claro);
-}
+    /* Tipos de feedback usando SUA paleta */
+    .feedback.sucesso {
+      background: var(--verde-folha);
+      border-left: 5px solid var(--verde-claro);
+    }
 
-.feedback.erro {
-  background: #8B2E2E; /* Vermelho terroso - harmonizado com seu marrom-terra */
-  border-left: 5px solid #C44D4D;
-}
+    .feedback.erro {
+      background: #8B2E2E;
+      /* Vermelho terroso - harmonizado com seu marrom-terra */
+      border-left: 5px solid #C44D4D;
+    }
 
-.feedback.aviso {
-  background: var(--marrom-terra);
-  border-left: 5px solid var(--bege-areia);
-  color: var(--branco-neve);
-}
+    .feedback.aviso {
+      background: var(--marrom-terra);
+      border-left: 5px solid var(--bege-areia);
+      color: var(--branco-neve);
+    }
 
-/* Animação de shake para erros - mais suave */
-@keyframes shake {
-  0%, 100% { transform: translateX(0); }
-  20%, 60% { transform: translateX(-5px); }
-  40%, 80% { transform: translateX(5px); }
-}
+    /* Animação de shake para erros - mais suave */
+    @keyframes shake {
 
-.error-border {
-  border: 2px solid #8B2E2E !important;
-  animation: shake 0.5s ease-in-out;
-}
+      0%,
+      100% {
+        transform: translateX(0);
+      }
 
-    </style>
+      20%,
+      60% {
+        transform: translateX(-5px);
+      }
+
+      40%,
+      80% {
+        transform: translateX(5px);
+      }
+    }
+
+    .error-border {
+      border: 2px solid #8B2E2E !important;
+      animation: shake 0.5s ease-in-out;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="feedback" class="feedback" aria-live="polite"></div>
-    <header>
-        <h1>Cadastro</h1>
-        <img src="../assets/img/logo.png" alt="Logo EcoMarket">
-    </header>
+  <div id="feedback" class="feedback" aria-live="polite"></div>
+  <header>
+    <h1>Cadastro</h1>
+    <img src="../assets/img/logo.png" alt="Logo EcoMarket">
+  </header>
 
-    <div class="profile-pic"><ion-icon name="person-outline"></ion-icon></div>
+  <div class="profile-pic"><ion-icon name="person-outline"></ion-icon></div>
 
-    <form class="content" id="form-cadastro" action="../api/cadastro.js" method="post">
-        <p>
-            <label for="inome">Nome</label>
-            <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
-        </p>
-        <p>
-            <input type="radio" name="sexo" id="imas"> <label for="imas">Masculino</label>
-            <input type="radio" name="sexo" id="ifem"> <label for="ifem">Feminino</label>
-        </p>
-        <p>
-            <label for="idat">Data de Nascimento</label>
-            <input type="date" name="dat" id="idat">
-        </p>
-        <p>
-            <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2})\d{4,5}-\d{4}$"
-                placeholder="(XX)XXXXX-XXXX">
-        </p>
-        <p>
-            <label for="iemail">Email</label>
-            <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com">
-        </p>
-        <p>
-            <label for="isenha">Senha</label>
-            <input type="password" name="senha" id="isenha" required minlength="6">
-            <small class="error-message" style="color: red; display: none;"></small>
-        </p>
-        <p>
-            <label for="iconfirmasenha">Confirme a Senha</label>
-            <input type="password" id="iconfirmasenha" required minlength="6">
-            <small class="error-message" style="color: red; display: none;"></small>
-        </p>
-        <p>
-            <input id="enviar" type="submit" value="Enviar">
-            <input id="limpar" type="reset" value="Limpar">
-        </p>
-    </form>
+  <form class="content" id="form-cadastro" action="../api/cadastro.js" method="post">
+    <p>
+      <label for="inome">Nome</label>
+      <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
+    </p>
+    <p>
+      <input type="radio" name="sexo" id="imas"> <label for="imas">Masculino</label>
+      <input type="radio" name="sexo" id="ifem"> <label for="ifem">Feminino</label>
+    </p>
+    <p>
+      <label for="idat">Data de Nascimento</label>
+      <input type="date" name="dat" id="idat">
+    </p>
+    <p>
+      <label for="itel">Telefone</label>
+      <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2})\d{4,5}-\d{4}$"
+        placeholder="(XX)XXXXX-XXXX">
+    </p>
+    <p>
+      <label for="iemail">Email</label>
+      <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com">
+    </p>
+    <p>
+      <label for="isenha">Senha</label>
+      <input type="password" name="senha" id="isenha" required minlength="8">
+      <small class="error-message" style="color: red; display: none;"></small>
+    </p>
+    <p>
+      <label for="iconfirmasenha">Confirme a Senha</label>
+      <input type="password" id="iconfirmasenha" required minlength="8">
+      <small class="error-message" style="color: red; display: none;"></small>
+    </p>
+    <p>
+      <input id="enviar" type="submit" value="Enviar">
+      <input id="limpar" type="reset" value="Limpar">
+    </p>
+  </form>
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script type="module" src="../assets/js/modules/feedback.js"></script>
-    <script src="../assets/js/auth.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script type="module" src="../assets/js/modules/feedback.js"></script>
+  <script src="../assets/js/auth.js"></script>
 </body>
 
 </html>
