--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -32,7 +32,7 @@
       <p><label for="idat">Data de Nascimento</label> <input type="date" name="dat" id="idat" /></p>
       <p><label for="itel">Telefone</label> <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\)\s?\d{4,5}-\d{4}$" placeholder="(XX)XXXXX-XXXX" /></p>
       <p><label for="iemail">Email</label> <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com" /></p>
-      <p><label for="isenha">Senha</label> <input type="password" name="senha" id="isenha" required minlength="6" /></p>
+      <p><label for="isenha">Senha</label> <input type="password" name="senha" id="isenha" required minlength="6" placeholder="Senha Atual"/></p>
       <p><label for="insenha">Nova Senha (opcional)</label> <input type="password" name="nsenha" id="insenha" placeholder="Nova senha" /></p>
     
       <div id="botoes-container">
@@ -48,6 +48,18 @@
     </section>
   </main>
 
+<!-- Modal de Confirmação de Senha -->
+<div id="modal-excluir-conta" class="modal hidden">
+  <div class="modal-content">
+    <h2>Confirmação de Exclusão</h2>
+    <p>Digite sua senha para confirmar a exclusão da conta:</p>
+    <input type="password" id="senha-confirmacao" placeholder="Digite sua senha">
+    <div class="modal-botoes">
+      <button id="confirmar-exclusao">Confirmar</button>
+      <button id="cancelar-exclusao">Cancelar</button>
+    </div>
+  </div>
+</div>
 
   <script type="module" src="../assets/js/perfil.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
