--- a/paginas/home.html
+++ b/paginas/home.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="EcoMarket - Produtos ecológicos e sustentáveis">
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../assets/estilo/estiloprod.css">
-    <link rel="stylesheet" href="../assets/estilo/home.css">
-    <title>EcoMarket - Home</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <title>EcoMarket - Produtos ecológicos e sustentáveis</title>
+  <meta name="description" content="EcoMarket - marketplace local de produtos ecológicos, sustentáveis e regionais. Conectando consumidores conscientes a pequenos produtores." />
+  <meta name="keywords" content="marketplace, produtos ecológicos, sustentáveis, comércio local, EcoMarket, Santa Maria da Vitória" />
+  <meta name="author" content="Victor Manoel e equipe do projeto EcoMarket Samavi" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="EcoMarket - Produtos ecológicos e sustentáveis" />
+  <meta property="og:description" content="Marketplace local conectando consumidores conscientes a pequenos produtores." />
+  <meta property="og:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png" />
+  <meta property="og:url" content="https://ecomarket-samavi.vercel.app/paginas/home.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="EcoMarket - Produtos ecológicos e sustentáveis" />
+  <meta name="twitter:description" content="Marketplace local para produtos sustentáveis e regionais." />
+  <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png" />
+
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <link rel="stylesheet" href="../assets/estilo/estiloprod.css" />
+  <link rel="stylesheet" href="../assets/estilo/home.css" />
 </head>
 <body>
     <script>
