--- a/index.html
+++ b/index.html
@@ -1,41 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/estilo/login.css">
-    <link rel="stylesheet" href="../assets/estilo/media-query.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <title>Login</title>
+  <!-- Codificação e responsividade -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Título e SEO -->
+  <title>Login - EcoMarket Samavi</title>
+  <meta name="description" content="Faça login para acessar sua conta no EcoMarket Samavi, o marketplace local de produtos sustentáveis de Santa Maria da Vitória.">
+  <meta name="keywords" content="login, EcoMarket, Santa Maria da Vitória, produtos sustentáveis, pequenos produtores">
+  <meta name="author" content="Victor Manoel e equipe do projeto EcoMarket Samavi">
+  <meta name="robots" content="noindex, nofollow"> <!-- Página de login não deve ser indexada -->
+
+  <!-- Open Graph para redes sociais -->
+  <meta property="og:title" content="Login - EcoMarket Samavi">
+  <meta property="og:description" content="Acesse sua conta para comprar produtos locais sustentáveis.">
+  <meta property="og:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
+  <meta property="og:url" content="https://ecomarket-samavi.vercel.app">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Login - EcoMarket Samavi">
+  <meta name="twitter:description" content="Acesse sua conta no EcoMarket Samavi e apoie produtores locais.">
+  <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
+
+  <!-- Favicon e Estilos -->
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../assets/estilo/login.css">
+  <link rel="stylesheet" href="../assets/estilo/media-query.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div id="feedback"></div>
-    <main>
-        <section id="login">
-            <div id="imagem"></div>
-            <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a), faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form id="form-login" method="post" autocomplete="on">
-                    <div class="campo">
-                        <span class="material-icons">person</span>
-                        <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email" required maxlength="80">
-                        <label for="iemail">Login</label>
-                    </div>
-                    <div class="campo">
-                        <span class="material-icons">vpn_key</span>
-                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8">
-                        <label for="isenha">Senha</label>
-                    </div>
-                    
-                    <input type="submit" value="Entrar" id="btn-login"> <!-- Adicionei ID -->
-                    <a href="./paginas/registro.html" class="botao">Crie sua conta<span class="material-icons">mail</span></a>
-                </form>
-            </div>
-        </section>
-    </main>
-    <script type="module" src="./assets/js/modules/feedback.js"></script>
-    <script src="./assets/js/auth.js" defer></script>
+  <div id="feedback" role="alert" aria-live="assertive"></div>
+  <main>
+    <section id="login" aria-label="Formulário de login do EcoMarket">
+      <div id="imagem" role="presentation" aria-hidden="true"></div>
+
+      <div id="formulario">
+        <h1>Login</h1>
+        <p>Seja bem-vindo(a)! Faça login para acessar sua conta e configurar seu ambiente.</p>
+
+        <form id="form-login" method="post" autocomplete="on" aria-label="Formulário de login">
+          <div class="campo">
+            <span class="material-icons" aria-hidden="true">person</span>
+            <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email" required maxlength="80" aria-label="E-mail">
+            <label for="iemail" class="visually-hidden">E-mail</label>
+          </div>
+
+          <div class="campo">
+            <span class="material-icons" aria-hidden="true">vpn_key</span>
+            <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" aria-label="Senha">
+            <label for="isenha" class="visually-hidden">Senha</label>
+          </div>
+
+          <input type="submit" value="Entrar" id="btn-login" aria-label="Entrar na conta">
+          <a href="./paginas/registro.html" class="botao" aria-label="Criar nova conta">Crie sua conta
+            <span class="material-icons" aria-hidden="true">mail</span>
+          </a>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <!-- Scripts -->
+  <script type="module" src="./assets/js/modules/feedback.js"></script>
+  <script src="./assets/js/auth.js" defer></script>
 </body>
 </html>
