--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- SEO -->
+  <title>EcoMarket - Perfil do Usuário</title>
+  <meta name="description" content="Atualize seus dados pessoais, visualize seus produtos e gerencie sua conta no EcoMarket Samavi." />
+  <meta name="keywords" content="perfil, conta, usuário, EcoMarket, Samavi, produtos, atualização de dados" />
+  <meta name="author" content="EcoMarket Samavi" />
+  <meta name="robots" content="noindex, nofollow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="EcoMarket - Perfil do Usuário" />
+  <meta property="og:description" content="Gerencie seu perfil e visualize os produtos que você publicou no EcoMarket Samavi." />
+  <meta property="og:image" content="https://ecomarket-samavi.vercel.app.com/assets/img/logo-300.png" />
+  <meta property="og:url" content="https://ecomarket-samavi.vercel.app.com/paginas/conta.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="EcoMarket - Perfil do Usuário" />
+  <meta name="twitter:description" content="Gerencie seu perfil e visualize os produtos que você publicou no EcoMarket Samavi." />
+  <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app.com/assets/img/logo-300.png" />
+
+  <!-- Ícone e CSS -->
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="../assets/estilo/perfil.css" />
-  <title>EcoMarket - Conta</title>
 </head>
 
 <body>
   <div id="feedback"></div>
+
   <header>
     <h1>Perfil</h1>
     <h2 id="saudacao"></h2>
@@ -20,89 +42,120 @@
   </header>
 
   <main>
-    <div class="profile-pic"><ion-icon name="person-outline"></ion-icon></div>
+    <div class="profile-pic">
+      <ion-icon name="person-outline"></ion-icon>
+    </div>
+
     <form class="content" id="form-perfil" action="../api/perfil/cadastro.js" method="post">
-      <p><label for="inome">Nome</label> <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name" /></p>
       <p>
-        <input type="radio" name="sexo" id="imas" value="masculino" />
+        <label for="inome">Nome</label>
+        <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
+      </p>
+
+      <p>
+        <span>Sexo:</span>
+        <input type="radio" name="sexo" id="imas" value="masculino">
         <label for="imas">Masculino</label>
-        <input type="radio" name="sexo" id="ifem" value="feminino" />
+
+        <input type="radio" name="sexo" id="ifem" value="feminino">
         <label for="ifem">Feminino</label>
       </p>
-      <p><label for="idat">Data de Nascimento</label> <input type="date" name="dat" id="idat" /></p>
-      <p><label for="itel">Telefone</label> <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\)\s?\d{4,5}-\d{4}$" placeholder="(XX)XXXXX-XXXX" /></p>
-      <p><label for="iemail">Email</label> <input type="email" name="email" id="iemail" autocomplete="email" required placeholder="seuemail@gmail.com" /></p>
-      <p><label for="isenha">Senha</label> <input type="password" name="senha" id="isenha" required minlength="6" placeholder="Senha Atual"/></p>
-      <p><label for="insenha">Nova Senha (opcional)</label> <input type="password" name="nsenha" id="insenha" placeholder="Nova senha" /></p>
-    
+
+      <p>
+        <label for="idat">Data de Nascimento</label>
+        <input type="date" name="dat" id="idat">
+      </p>
+
+      <p>
+        <label for="itel">Telefone</label>
+        <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\)\s?\d{4,5}-\d{4}$" placeholder="(XX)XXXXX-XXXX">
+      </p>
+
+      <p>
+        <label for="iemail">Email</label>
+        <input type="email" name="email" id="iemail" required autocomplete="email" placeholder="seuemail@gmail.com">
+      </p>
+
+      <p>
+        <label for="isenha">Senha</label>
+        <input type="password" name="senha" id="isenha" required minlength="6" placeholder="Senha Atual">
+      </p>
+
+      <p>
+        <label for="insenha">Nova Senha (opcional)</label>
+        <input type="password" name="nsenha" id="insenha" placeholder="Nova senha">
+      </p>
+
       <div id="botoes-container">
-        <input id="enviar" type="submit" value="Atualizar Perfil" />
+        <input id="enviar" type="submit" value="Atualizar Perfil">
         <button type="button" id="btn-logout">Sair</button>
         <button type="button" id="btn-excluir-conta">Excluir Conta</button>
       </div>
     </form>
-    <!-- Nova seção para listar os produtos do usuário -->
+
     <section class="meus-produtos">
       <h2>Meus Produtos</h2>
       <div id="produtos-usuario">Carregando seus produtos...</div>
     </section>
   </main>
 
-<!-- Modal de Confirmação de Senha -->
-<div id="modal-excluir-conta" class="modal hidden">
-  <div class="modal-content">
-    <h2>Confirmação de Exclusão</h2>
-    <p>Digite sua senha para confirmar a exclusão da conta:</p>
-    <input type="password" id="senha-confirmacao" placeholder="Digite sua senha">
-    <div class="modal-botoes">
-      <button id="confirmar-exclusao">Confirmar</button>
-      <button id="cancelar-exclusao">Cancelar</button>
+  <!-- Modal -->
+  <div id="modal-excluir-conta" class="modal hidden">
+    <div class="modal-content">
+      <h2>Confirmação de Exclusão</h2>
+      <p>Digite sua senha para confirmar a exclusão da conta:</p>
+      <input type="password" id="senha-confirmacao" placeholder="Digite sua senha">
+      <div class="modal-botoes">
+        <button id="confirmar-exclusao">Confirmar</button>
+        <button id="cancelar-exclusao">Cancelar</button>
+      </div>
     </div>
   </div>
-</div>
 
+  <!-- Scripts -->
   <script type="module" src="../assets/js/perfil.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
+
   <script>
-  const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
+    const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
 
-  if (usuarioLogado) {
-    async function carregarProdutosUsuario() {
-      try {
-        const response = await fetch(`/api/perfil/produtos-usuario?usuarioId=${usuarioLogado._id}`);
-        const result = await response.json();
+    if (usuarioLogado) {
+      async function carregarProdutosUsuario() {
+        try {
+          const response = await fetch(`/api/perfil/produtos-usuario?usuarioId=${usuarioLogado._id}`);
+          const result = await response.json();
 
-        const container = document.getElementById('produtos-usuario');
-        if (result.success && result.data.length > 0) {
-          container.innerHTML = result.data.map(prod => {
-            const foto = prod.fotos && prod.fotos.length > 0
-              ? (prod.fotos[0].startsWith('http') ? prod.fotos[0] : `https://res.cloudinary.com/ddfacpcm5/image/upload/${prod.fotos[0]}`)
-              : '/assets/img/placeholder.png';
+          const container = document.getElementById('produtos-usuario');
+          if (result.success && result.data.length > 0) {
+            container.innerHTML = result.data.map(prod => {
+              const foto = prod.fotos && prod.fotos.length > 0
+                ? (prod.fotos[0].startsWith('http') ? prod.fotos[0] : `https://res.cloudinary.com/ddfacpcm5/image/upload/${prod.fotos[0]}`)
+                : '/assets/img/placeholder.png';
 
-            return `
-              <div class="produto-item">
-                <img src="${foto}" alt="${prod.nome}" />
-                <div class="produto-info">
-                  <h4>${prod.nome}</h4>
-                  <p>R$ ${parseFloat(prod.preco).toFixed(2)}</p>
+              return `
+                <div class="produto-item">
+                  <img src="${foto}" alt="${prod.nome}" />
+                  <div class="produto-info">
+                    <h4>${prod.nome}</h4>
+                    <p>R$ ${parseFloat(prod.preco).toFixed(2)}</p>
+                  </div>
+                  <button class="btn-editar" onclick="window.location.href='editar-produto.html?id=${prod._id}'">Editar</button>
                 </div>
-                <button class="btn-editar" onclick="window.location.href='editar-produto.html?id=${prod._id}'">Editar</button>
-              </div>
-            `;
-          }).join('');
-        } else {
-          container.innerHTML = '<p>Você ainda não postou produtos.</p>';
+              `;
+            }).join('');
+          } else {
+            container.innerHTML = '<p>Você ainda não postou produtos.</p>';
+          }
+        } catch (error) {
+          console.error('Erro ao carregar produtos do usuário:', error);
+          document.getElementById('produtos-usuario').textContent = 'Erro ao carregar produtos.';
         }
-      } catch (error) {
-        console.error('Erro ao carregar produtos do usuário:', error);
-        document.getElementById('produtos-usuario').textContent = 'Erro ao carregar produtos.';
       }
-    }
 
-    carregarProdutosUsuario();
-  }
-</script>
+      carregarProdutosUsuario();
+    }
+  </script>
 </body>
 </html>
