--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -3,61 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EcoMarket - Produtos</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../assets/estilo/estiloprod.css">
     <link rel="stylesheet" href="../assets/estilo/produtos.css">
-    <title>EcoMarket - Produtos</title>
+    <!-- Metadados para SEO e acessibilidade -->
+    <meta name="description" content="Confira todos os produtos disponíveis no EcoMarket SAMAVI, um marketplace sustentável para produtores locais.">
+    <meta name="author" content="Equipe EcoMarket SAMAVI">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="EcoMarket - Produtos">
+    <meta property="og:description" content="Navegue por produtos sustentáveis de produtores locais de Santa Maria da Vitória.">
+    <meta property="og:image" content="https://ecomarket-samavi.vercel.app.com">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <script>
-        // Proteção de Rota (deve ser o PRIMEIRO script da página)
-        const usuario = JSON.parse(localStorage.getItem('usuarioLogado'));
-
-        if (!usuario || !usuario.email) { // Verifica tanto a existência quanto dados válidos
-        localStorage.removeItem('usuarioLogado'); // Limpa dados corrompidos
+      const usuario = JSON.parse(localStorage.getItem('usuarioLogado'));
+      if (!usuario || !usuario.email) {
+        localStorage.removeItem('usuarioLogado');
         window.location.href = '/index.html?redirect=' + encodeURIComponent(window.location.pathname);
-}
-</script>
+      }
+    </script>
+
     <div id="feedback" class="feedback" aria-live="polite"></div>
+
     <header>
-        <div class="logo-container">
-            <h1>EcoMarket SAMAVI</h1>
-            <img src="../assets/img/logo.png" alt="Logo EcoMarket">
-        </div>
+      <div class="logo-container">
+        <h1>EcoMarket SAMAVI</h1>
+        <img src="../assets/img/logo.png" alt="Logo EcoMarket" />
+      </div>
 
-        <div class="header-controls">
-            <ul>
-                <li><a href="../paginas/home.html"><ion-icon title="Voltar à página Home" name="home-outline" id="home-p"></ion-icon></a></li>
-                <li><a href="add-produto.html" class="nav-link" title="Adicionar Produto"><ion-icon name="add-circle-outline"></ion-icon></a></li>
-            </ul>
+      <div class="header-controls">
+        <ul>
+          <li>
+            <a href="../paginas/home.html">
+              <ion-icon title="Voltar à página Home" name="home-outline" id="home-p"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a href="add-produto.html" class="nav-link" title="Adicionar Produto">
+              <ion-icon name="add-circle-outline"></ion-icon>
+            </a>
+          </li>
+        </ul>
 
-            <div class="carrinho-icone" title="Carrinho de Compras">
-                <img src="../assets/img/carrinho.png" alt="Carrinho de Compras" width="30" height="30">
-
-                <span id="contador-carrinho">0</span>
-                <div class="carrinho-dropdown" id="carrinho-dropdown">
-                    <div id="lista-carrinho"></div>
-                    <div class="carrinho-total" id="total-carrinho">Total: R$ 0,00</div>
-                    <div class="carrinho-botoes">
-                        <button class="btn-limpar">Limpar Carrinho</button>
-                        <button id="finalizar-compra" class="btn-finalizar">Finalizar Compra</button>
-                    </div>
-                </div>
+        <div class="carrinho-icone" title="Carrinho de Compras">
+          <img src="../assets/img/carrinho.png" alt="Carrinho de Compras" width="30" height="30" />
+          <span id="contador-carrinho">0</span>
+          <div class="carrinho-dropdown" id="carrinho-dropdown">
+            <div id="lista-carrinho"></div>
+            <div class="carrinho-total" id="total-carrinho">Total: R$ 0,00</div>
+            <div class="carrinho-botoes">
+              <button class="btn-limpar">Limpar Carrinho</button>
+              <button id="finalizar-compra" class="btn-finalizar">Finalizar Compra</button>
             </div>
+          </div>
         </div>
+      </div>
     </header>
+
     <main class="produtos-page">
-        <h1 id="subtitulo">Todos os Produtos</h1>
-        <div class="barra-pesquisa">
-            <input type="text" id="input-pesquisa" placeholder="Buscar produtos..." aria-label="Buscar produtos">
-        </div>
-        <div class="produtos-grid" id="produtos-lista"></div>
+      <h1 id="subtitulo">Todos os Produtos</h1>
+
+      <div class="barra-pesquisa">
+        <input type="text" id="input-pesquisa" placeholder="Buscar produtos..." aria-label="Buscar produtos" />
+      </div>
+
+      <div class="produtos-grid" id="produtos-lista"></div>
     </main>
 
     <script type="module" src="../assets/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+  </body>
 </html>
