--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -3,48 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <title>Detalhes do Produto - EcoMarket</title>
+
+  <!-- Estilos -->
   <link rel="stylesheet" href="../assets/estilo/detalhes-produto.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-  <title>Detalhes do Produto</title>
+
+  <!-- Metadados para SEO -->
+  <meta name="description" content="Detalhes completos do produto no EcoMarket. Conheça as características, preço e adquira produtos sustentáveis com facilidade." />
+  <meta name="author" content="EcoMarket" />
 </head>
 <body>
+  <!-- Feedback para acessibilidade -->
   <div id="feedback" class="feedback" aria-live="polite"></div>
-  <div id="produto-container">
-    <div id="produto-imagens"></div>
-    <div id="produto-info">
+
+  <main id="produto-container" role="main" aria-labelledby="produto-nome">
+    <section id="produto-imagens" aria-label="Imagens do produto"></section>
+
+    <section id="produto-info">
       <h1 id="produto-nome">Carregando...</h1>
       <p id="produto-descricao"></p>
-      <span id="produto-preco"></span>
-      <button id="btn-comprar">Comprar</button>
+      <span id="produto-preco" aria-live="polite"></span>
 
-     <div class="carrinho-icone" title="Carrinho de Compras">
-      <img id="carrinho" src="../assets/img/carrinho.png" alt="Carrinho de Compras">
-      <span id="contador-carrinho">0</span>
-      <div class="carrinho-dropdown" id="carrinho-dropdown">
-        <div id="lista-carrinho"></div>
-        <div class="carrinho-total" id="total-carrinho">Total: R$ 0,00</div>
-        <div class="carrinho-botoes">
-          <button class="btn-limpar">Limpar Carrinho</button>
-          <button id="finalizar-compra" class="btn-finalizar">Finalizar Compra</button>
+      <button id="btn-comprar" aria-label="Comprar este produto">Comprar</button>
+
+      <!-- Carrinho de compras -->
+      <div class="carrinho-icone" title="Carrinho de Compras" aria-label="Carrinho de Compras">
+        <img id="carrinho" src="../assets/img/carrinho.png" alt="Ícone do carrinho de compras" />
+        <span id="contador-carrinho" aria-live="polite" aria-atomic="true">0</span>
+
+        <div class="carrinho-dropdown" id="carrinho-dropdown" aria-label="Conteúdo do carrinho">
+          <div id="lista-carrinho"></div>
+          <div class="carrinho-total" id="total-carrinho" aria-live="polite">Total: R$ 0,00</div>
+          <div class="carrinho-botoes">
+            <button class="btn-limpar" type="button">Limpar Carrinho</button>
+            <button id="finalizar-compra" class="btn-finalizar" type="button">Finalizar Compra</button>
+          </div>
         </div>
       </div>
-    </div>
 
-
+      <!-- Botão para edição do produto, visível apenas para o dono -->
       <div id="editar-container" style="display: none;">
-        <button class="btn-editar" onclick="redirecionarParaEdicao()">
-          <i class="fas fa-edit"></i> Editar Produto
+        <button class="btn-editar" type="button" onclick="redirecionarParaEdicao()" aria-label="Editar produto">
+          <i class="fas fa-edit" aria-hidden="true"></i> Editar Produto
         </button>
       </div>
-      <a href="../paginas/home.html" class="btn-home">
-        <ion-icon name="home-outline"></ion-icon>
-      </a>
-      <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos">
-        <ion-icon name="storefront-outline"></ion-icon>
-      </a>
-    </div>
-  </div>
+
+      <!-- Navegação -->
+      <nav aria-label="Navegação da página">
+        <a href="../paginas/home.html" class="btn-home" aria-label="Página inicial">
+          <ion-icon name="home-outline"></ion-icon>
+        </a>
+        <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos" aria-label="Voltar à página de produtos">
+          <ion-icon name="storefront-outline"></ion-icon>
+        </a>
+      </nav>
+    </section>
+  </main>
 
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
@@ -78,18 +94,21 @@
     });
 
     function displayProduto(produto) {
-      document.getElementById("produto-nome").textContent = produto.nome;
-      document.getElementById('produto-descricao').innerHTML = produto.descricao.replace(/\n/g, '<br>');
-      document.getElementById("produto-preco").textContent = `R$ ${produto.preco.toFixed(2)}`;
-
+      const nomeEl = document.getElementById("produto-nome");
+      const descEl = document.getElementById("produto-descricao");
+      const precoEl = document.getElementById("produto-preco");
       const imagensEl = document.getElementById("produto-imagens");
-      imagensEl.innerHTML = "";
 
+      nomeEl.textContent = produto.nome;
+      descEl.innerHTML = produto.descricao.replace(/\n/g, '<br>');
+      precoEl.textContent = `R$ ${produto.preco.toFixed(2)}`;
+
+      imagensEl.innerHTML = "";
       const fotos = (produto.fotos && produto.fotos.length > 0) ? produto.fotos : ["../assets/img/placeholder.png"];
       fotos.forEach(foto => {
         const img = document.createElement("img");
         img.src = foto;
-        img.alt = produto.nome;
+        img.alt = `Imagem do produto: ${produto.nome}`;
         img.onerror = () => (img.src = "../assets/img/placeholder.png");
         imagensEl.appendChild(img);
       });
@@ -128,8 +147,8 @@
     function showError(message) {
       const container = document.getElementById("produto-container");
       container.innerHTML = `
-        <div class="error-message">
-          <i class="fas fa-exclamation-triangle"></i>
+        <div class="error-message" role="alert">
+          <i class="fas fa-exclamation-triangle" aria-hidden="true"></i>
           <p>${message}</p>
           <a href="/paginas/produtos.html" class="btn">Voltar aos produtos</a>
         </div>
@@ -137,15 +156,17 @@
     }
   </script>
 
-  <!-- Módulos normais -->
+  <!-- Scripts gerais -->
   <script type="module" src="../assets/js/modules/carrinho.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
   <script type="module" src="../assets/js/modules/produtos.js"></script>
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module" src="../assets/js/main.js"></script>
 
-  <!-- Importações específicas da página (carrinho/feedback) -->
+  <!-- Ionicons -->
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+  <!-- Inicialização do carrinho e feedback -->
   <script type="module">
     import { setupCarrinho, adicionarAoCarrinho } from '../assets/js/modules/carrinho.js';
     import { mostrarFeedback } from '../assets/js/modules/feedback.js';
