--- a/paginas/home.html
+++ b/paginas/home.html
@@ -140,7 +140,7 @@
                 document.getElementById('saudacao').textContent = 'Olá, visitante!';
                 return;
             }
-            document.getElementById('saudacao').textContent = `Olá, ${usuarioLogado.nome}!`;
+            document.getElementById('saudacao').textContent = `Olá, ${usuarioLogado.nome}`;
         });
     </script>
     <script type="module" src="../assets/js/modules/config.js"></script>
